--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "core-js": "^3.4.4",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
-    "vue-router": "^3.1.5"
+    "vue-router": "^3.1.5",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
@@ -33,9 +34,12 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {},
+    "rules": {
+      "no-console": "off"
+    },
     "parserOptions": {
       "parser": "babel-eslint"
+      
     }
   },
   "browserslist": [
